# florisboard

./: .gitignore  ANDROID15_ARM64_COMPATIBILITY.md  ARM64_ANDROID15_OPTIMIZATION_REPORT.md  ARM64_BUILD_IMPLEMENTATION_REPORT.md  BUILD_ON_GITHUB.md  BUILD_SYSTEM_README.md  BUILD_VARIANTS_GUIDE.md  CODE_REVIEW_REPORT.md  COMPATIBILIDADE_RMX3834_PT.md  FINAL_VERIFICATION_REPORT.md  README.md  REFACTORING_SUMMARY.md  build_and_sign.sh  build_and_verify_arm64.sh  build_magisk_arm64.sh  build_report.txt  build_userland_arm64.sh  gradle.properties  settings.gradle.kts  sign_apk.sh  signing.properties.template
.github/workflows/: build-apk.yml  build-arm64-verified.yml  build-unsigned-apk.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/dev/patrickgold/florisboard/: FlorisApplication.kt  FlorisImeService.kt
app/src/main/kotlin/dev/patrickgold/florisboard/ime/clipboard/provider/: ClipboardDatabase.kt
app/src/main/kotlin/dev/patrickgold/florisboard/ime/lifecycle/: LifecycleInputMethodService.kt
app/src/main/kotlin/dev/patrickgold/florisboard/ime/nlp/: NlpManager.kt
app/src/main/kotlin/dev/patrickgold/florisboard/lib/util/: InputMethodUtils.kt
app/src/main/res/values/: strings.xml
benchmark/: build.gradle.kts
benchmark/src/main/kotlin/dev/patrickgold/florisboard/benchmark/: BaselineProfileGenerator.kt
docs/: SIGNING.md
gradle/: libs.versions.toml  toolchain.gradle.kts
lib/android/: build.gradle.kts
lib/android/src/main/kotlin/org/florisboard/lib/android/: AndroidSettings.kt
lib/color/: build.gradle.kts
lib/compose/: build.gradle.kts
lib/kotlin/: build.gradle.kts
lib/native/: build.gradle.kts
lib/native/src/main/rust/: CMakeLists.txt
lib/snygg/: build.gradle.kts
lib/zipraf-omega/: build.gradle.kts
lib/zipraf-omega/src/main/kotlin/org/florisboard/lib/zipraf/: ErrorHandlingModule.kt  InteroperabilityModule.kt  PerformanceOptimizer.kt  RiskMitigationModule.kt
lib/zipraf-omega/src/test/kotlin/org/florisboard/lib/zipraf/: RiskMitigationModuleTest.kt  StandardsComplianceModuleTest.kt
